Updated Carousel and Folder Structure

--- a/index.html
+++ b/index.html
@@ -2,97 +2,16 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./CSS/base-styles.css" />
-  <link rel="stylesheet" href="./CSS/index-carousel.css" />
-  <link rel="stylesheet" href="./CSS/index.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Roboto:wght@400;900&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&display=swap" rel="stylesheet" />
-  <script type="importmap">
-      {
-        "imports": {
-          "three": "https://cdn.skypack.dev/three",
-          "OrbitControls": "https://cdn.skypack.dev/three/examples/jsm/controls/OrbitControls",
-          "RenderPass": "https://cdn.skypack.dev/three/examples/jsm/postprocessing/RenderPass",
-          "EffectComposer": "https://cdn.skypack.dev/three/examples/jsm/postprocessing/EffectComposer",
-          "GammaCorrectionShader": "https://cdn.skypack.dev/three/examples/jsm/shaders/GammaCorrectionShader",
-          "ShaderPass": "https://cdn.skypack.dev/three/examples/jsm/postprocessing/ShaderPass",
-          "RGBShiftShader": "https://cdn.skypack.dev/three/examples/jsm/shaders/RGBShiftShader"
-        }
-      }
-    </script>
-  <script src="https://kit.fontawesome.com/b11298589f.js" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <title>Amandeep Toora</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index</title>
+    <meta http-equiv="refresh" content="0; url=https://dino-jesus.github.io/HTML/index.html">
+
 </head>
 
-<body id="body-container">
-  <div class="canvas-continer">
-    <canvas class="webgl-canvas"></canvas>
-  </div>
-  <div id="main-page">
-    <!-- Name -->
-    <div id="name-container">
-      <h1 id="name" class="neon">AMANDEEP TOORA</h1>
-    </div>
-    <!-- Circular Link Buttons -->
-    <div id="personal-links-container">
-      <ul id="personal-links-list">
-        <li>
-          <a class="neon" href="https://www.linkedin.com/in/aman2ra/" target="_blank"><i
-              class="fa-brands fa-linkedin"></i></a>
-        </li>
-        <li>
-          <a class="neon" href="https://github.com/Dino-Jesus" target="_blank"><i class="fa-brands fa-github"></i></a>
-        </li>
-        <li>
-          <a class="neon" href="#"><i class="fa-solid fa-envelope"></i></a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div id="toggle-btn-container">
-    <!-- Button Pops out Carousel -->
-    <button id="projects-slider-toggle" aria-label="Toggle Highlighted Projects">
-      <!-- Up/Down Arrow -->
-      <span id="slide-out-arrow"> Highlighted Projects </span>
-    </button>
-  </div>
-  <!-- Carousel Unit -->
-  <!-- Carousel Popout Container -->
-  <nav id="popout-unit">
-    <!-- Carousel -->
-    <div id="projects-carousel">
-      <button id="carousel-left" class="carousel-button">&lt</button>
-      <div id="carousel-track-container">
-        <ul id="carousel-track"></ul>
-      </div>
-      <div id="names-track-container" class="neon">
-        <ul id="names-track"></ul>
-      </div>
-      <button id="carousel-right" class="carousel-button">&gt</button>
+<body>
 
-      <div class="carousel-nav"></div>
-    </div>
-    <!-- All Projects Button -->
-    <a id="all-projects-btn" class="neon" href="./HTML/projects.html">All Projects</a>
-  </nav>
-  <script type="module" src="./JS/index.js"></script>
-  <script src="./JS/carousel.js"></script>
-  <script src="./JS/dat.gui.min.js"></script>
-  <script type="module" src="./JS/background.js"></script>
 </body>
 
 </html>
