--- a/HTML/index.html
+++ b/HTML/index.html
@@ -38,7 +38,7 @@
       }
     </script>
   <script src="https://kit.fontawesome.com/b11298589f.js" crossorigin="anonymous"></script>
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
   <title>Amandeep Toora</title>
 </head>
 
