--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -106,16 +106,18 @@
         <div class="info-row">
           <div id="col-1" class="info-col">
             <!-- Carousel -->
-            <div id="projects-carousel">
-              <div id="names-track-container">
-                <ul id="names-track"></ul>
+            <div class="projects-carousel">
+              <div class="carousel-background"></div>
+              <div class="names-track-container">
+                <ul class="names-track"></ul>
               </div>
-              <div id="carousel-track-container">
-                <ul id="carousel-track"></ul>
+              <div class="carousel-track-container">
+                <button class="expand-carousel"></button>
+                <ul class="carousel-track"></ul>
               </div>
               <div class="carousel-nav"></div>
-              <button id="carousel-left" class="carousel-button">&lt</button>
-              <button id="carousel-right" class="carousel-button">&gt</button>
+              <button class="carousel-button carousel-left">&lt</button>
+              <button class="carousel-button carousel-right">&gt</button>
             </div>
 
             <div id="tags-container">
