updated directory structure for jekyll

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- MyCSS -->
-  <link rel="stylesheet" href="../CSS/base-styles.css" />
-  <link rel="stylesheet" href="../CSS/index-carousel.css" />
-  <link rel="stylesheet" href="../CSS/index.css" />
+  <link rel="stylesheet" href="../assets/css/base-styles.css" />
+  <link rel="stylesheet" href="../assets/css/index-carousel.css" />
+  <link rel="stylesheet" href="../assets/css/index.css" />
   <!-- Outside CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -92,13 +92,12 @@
       <div class="carousel-nav"></div>
     </div>
     <!-- All Projects Button -->
-    <!-- <a id="all-projects-btn" class="neon" href="../HTML/projects.html">All Projects</a> -->
-    <a id="all-projects-btn" class="neon" href="../HTML/projects.html">All Projects</a>
+    <a id="all-projects-btn" class="neon" href="./projects.html">All Projects</a>
   </nav>
-  <script type="module" src="../JS/index.js"></script>
-  <script src="../JS/carousel.js"></script>
-  <script src="../JS/dat.gui.min.js"></script>
-  <script type="module" src="../JS/background.js"></script>
+  <script type="module" src="../assets/js/index.js"></script>
+  <script src="../assets/js/carousel.js"></script>
+  <script src="../assets/js/dat.gui.min.js"></script>
+  <script type="module" src="../assets/js/background.js"></script>
 </body>
 
 </html>
