testing for assets

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -46,8 +46,8 @@
   <div class="canvas-continer">
     <canvas class="webgl-canvas"></canvas>
   </div>
-  <img src="../assets/images/General/Logo.png" alt="" style="width:50%">
-  <img src="../assets/images/Highlighted Projects/Slide1.png" alt="" style="width:50%">
+  <img class="imone" src="../assets/images/General/Logo.png" alt="" style="width:50%">
+  <img class="imtwo" src="../assets/images/Highlighted Projects/Slide1.png" alt="" style="width:50%">
   <div id="main-page">
     <!-- Name -->
     <div id="name-container">
