Images in index should finally be loading

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -38,7 +38,7 @@
       }
     </script>
   <script src="https://kit.fontawesome.com/b11298589f.js" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <title>Amandeep Toora</title>
 </head>
 
@@ -46,8 +46,6 @@
   <div class="canvas-continer">
     <canvas class="webgl-canvas"></canvas>
   </div>
-  <img class="imone" src="../assets/images/General/Logo.png" alt="" style="width:50%">
-  <img class="imtwo" src="../assets/images/Highlighted Projects/Slide1.png" alt="" style="width:50%">
   <div id="main-page">
     <!-- Name -->
     <div id="name-container">
