--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -22,7 +22,7 @@
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&display=swap" rel="stylesheet" />
-  <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <title>Amandeep Toora: Projects</title>
 </head>
 
