Old file structure and Projects folder images fix

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- MyCSS -->
-  <link rel="stylesheet" href="../assets/css/base-styles.css" />
-  <link rel="stylesheet" href="../assets/css/index-carousel.css" />
-  <link rel="stylesheet" href="../assets/css/index.css" />
+  <link rel="stylesheet" href="../css/base-styles.css" />
+  <link rel="stylesheet" href="../css/index-carousel.css" />
+  <link rel="stylesheet" href="../css/index.css" />
   <!-- Outside CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -94,10 +94,10 @@
     <!-- All Projects Button -->
     <a id="all-projects-btn" class="neon" href="./projects.html">All Projects</a>
   </nav>
-  <script type="module" src="../assets/js/index.js"></script>
-  <script src="../assets/js/carousel.js"></script>
-  <script src="../assets/js/dat.gui.min.js"></script>
-  <script type="module" src="../assets/js/background.js"></script>
+  <script type="module" src="../js/index.js"></script>
+  <script src="../js/carousel.js"></script>
+  <script src="../js/dat.gui.min.js"></script>
+  <script type="module" src="../js/background.js"></script>
 </body>
 
 </html>
