--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../assets/css/base-styles.css" />
-  <link rel="stylesheet" href="../assets/css/project-navbar.css" />
-  <link rel="stylesheet" href="../assets/css/project-carousel.css" />
-  <link rel="stylesheet" href="../assets/css/project-list.css" />
-  <link rel="stylesheet" href="../assets/css/project-page.css" />
+  <link rel="stylesheet" href="../css/base-styles.css" />
+  <link rel="stylesheet" href="../css/project-navbar.css" />
+  <link rel="stylesheet" href="../css/project-carousel.css" />
+  <link rel="stylesheet" href="../css/project-list.css" />
+  <link rel="stylesheet" href="../css/project-page.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -32,13 +32,13 @@
     <button id="projects-nav-toggle"><span id="hamburger"></span></button>
     <h1 id="main-page-title">My Current Projects</h1>
     <div class="project-number elevator-floor">
-      <img class="digit" id="place-three" src="../assets/images/General/Font/0.png" alt="">
-      <img class="digit" id="place-two" src="../assets/images/General/Font/0.png" alt="">
-      <img class="digit" id="place-one" src="../assets/images/General/Font/1.png" alt="">
+      <img class="digit" id="place-three" src="../assets/images/general/font/0.png" alt="">
+      <img class="digit" id="place-two" src="../assets/images/general/font/0.png" alt="">
+      <img class="digit" id="place-one" src="../assets/images/general/font/1.png" alt="">
       <div class="counter-panel"></div>
     </div>
     <nav id="projects-nav">
-      <img class="logo" src="../assets/images/General/Logo.png" alt="">
+      <img class="logo" src="../assets/images/general/Logo.png" alt="">
       <h1 id="nav-text">Navbar</h1>
       <h2 id="nav-main-page" class="project-item">
         <button id="main-page-link" class="project-link">Main Page</button>
@@ -57,11 +57,11 @@
   <div id="projects-main-page">
     <!-- All Projects List Page -->
     <div class="city-background">
-      <img src="../assets/images/General/City.png" alt="">
+      <img src="../assets/images/general/City.png" alt="">
     </div>
     <div class="elevator">
       <div class="elevator-panel left-panel">
-        <img class="logo" src="../assets/images/General/Logo.png" alt="">
+        <img class="logo" src="../assets/images/general/Logo.png" alt="">
         <div class="sign-left">
           <h1 class="sign-left-text sign-neon">AMANDEEP</h1>
         </div>
@@ -133,10 +133,10 @@
       </div>
     </div>
   </template>
-  <script src="../assets/js/projects.js"></script>
-  <script src="../assets/js/projects-navbar.js"></script>
-  <script src="../assets/js/carousel.js"></script>
-  <script src="../assets/js/dat.gui.min.js"></script>
+  <script src="../js/projects.js"></script>
+  <script src="../js/projects-navbar.js"></script>
+  <script src="../js/carousel.js"></script>
+  <script src="../js/dat.gui.min.js"></script>
 </body>
 
 </html>
