ability to auto pause videos expand button improve

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -110,7 +110,7 @@
                 <ul class="names-track"></ul>
               </div>
               <div class="carousel-track-container">
-                <button class="expand-carousel"></button>
+                <button class="expand-carousel">&lt &gt</button>
                 <ul class="carousel-track"></ul>
               </div>
               <div class="carousel-nav"></div>
