Updated start link with new repo name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <meta http-equiv="refresh" content="0; url=https://dino-jesus.github.io/HTML/index.html">
+    <meta http-equiv="refresh" content="0; url=https://aman2ra.github.io/HTML/index.html">
 
 </head>
 
