Updated github link with new username

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -57,7 +57,7 @@
               class="fa-brands fa-linkedin"></i></a>
         </li>
         <li>
-          <a class="neon" href="https://github.com/Dino-Jesus" target="_blank"><i class="fa-brands fa-github"></i></a>
+          <a class="neon" href="https://github.com/Aman2ra" target="_blank"><i class="fa-brands fa-github"></i></a>
         </li>
         <li>
           <a class="neon" href="#"><i class="fa-solid fa-envelope"></i></a>
